# Transcriptor4AI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Transcriptor4AI_interface.py  app_core.py  build.py  code_transcription.py  code_transcriptor.py  directory_tree.py  environment.yml  estilo.txt  main.py  pyproject.toml  setup.py  tree_generator.py  updater.py
.github/workflows/: ci.yml
scripts/: build.py  updater.py
src/transcriptor4ai/: cli.py  config.py  filtering.py  logging.py  main.py  paths.py  pipeline.py  updater.py  validate_config.py
src/transcriptor4ai/core/analysis/: ast_parser.py  tree_generator.py  tree_renderer.py
src/transcriptor4ai/core/pipeline/: engine.py  filters.py  reader.py  transcriber.py  validator.py  worker.py  writer.py
src/transcriptor4ai/core/pipeline/components/: filters.py  reader.py  writer.py
src/transcriptor4ai/core/pipeline/stages/: assembler.py  setup.py  transcriber.py  transcriber_context.py  transcriber_engine.py  validator.py  worker.py
src/transcriptor4ai/core/processing/: minifier.py  sanitizer.py  tokenizer.py
src/transcriptor4ai/core/processing/strategies/: __init__.py  anthropic.py  base.py  google.py  heuristic.py  local.py  openai.py
src/transcriptor4ai/core/services/: cache.py  estimator.py  registry.py  scanner.py  updater.py
src/transcriptor4ai/domain/: config.py  constants.py  migrations.py  pipeline_models.py  transcription_models.py  tree_models.py
src/transcriptor4ai/infra/: fs.py  logging.py  network.py
src/transcriptor4ai/infra/logging/: __init__.py  config.py  core.py  handlers.py
src/transcriptor4ai/infra/network/: __init__.py  common.py  pricing_client.py  telemetry_client.py  updates_client.py
src/transcriptor4ai/interface/cli/: app.py  args.py
src/transcriptor4ai/interface/gui/: app.py  handlers.py  layouts.py  threads.py
src/transcriptor4ai/interface/gui/components/: dashboard.py  logs_console.py  main_window.py  settings.py  sidebar.py
src/transcriptor4ai/interface/gui/components/dashboard_parts/: cost_section.py  input_section.py  options_section.py
src/transcriptor4ai/interface/gui/components/settings_parts/: ai_model_part.py  filters_part.py  formatting_part.py  profiles_part.py
src/transcriptor4ai/interface/gui/controllers/: execution_controller.py  feedback_controller.py  main_controller.py  pricing_controller.py  profile_controller.py  update_controller.py
src/transcriptor4ai/interface/gui/dialogs/: crash_modal.py  feedback_modal.py  results_modal.py  update_modal.py
src/transcriptor4ai/interface/gui/utils/: binder.py  tk_helpers.py
src/transcriptor4ai/interface/locales/: en.json  es.json
src/transcriptor4ai/locales/: en.json
src/transcriptor4ai/transcription/: format.py  models.py  service.py
src/transcriptor4ai/tree/: ast_symbols.py  models.py  render.py  service.py
src/transcriptor4ai/ui/: gui.py
src/transcriptor4ai/utils/: i18n.py  minify_code.py  network.py  sanitizer.py  token_counter.py
tests/: conftest.py  test_cli_logic.py  test_code_transcription.py  test_code_transcriptor_functional.py  test_code_transcriptor_helpers.py  test_config_migration.py  test_directory_tree.py  test_filtering.py  test_imports_smoke.py  test_integration_pipeline.py  test_main_helpers_and_config.py  test_minifier.py  test_paths.py  test_pipeline_integration.py  test_sanitizer.py  test_token_counter.py  test_transcription_robustness.py  test_tree.py  test_tree_generator_ast.py  test_tree_generator_helpers.py  test_tree_generator_structure_and_render.py  test_validate_config.py
tests/e2e/: test_cli_e2e.py
tests/integration/infra/: test_fs_io.py  test_logging_infra.py  test_network_client.py  test_network_pricing.py
tests/integration/pipeline/: test_caching_logic.py  test_transcriber_service.py
tests/unit/core/analysis/: test_ast_parser.py  test_ast_skeleton_robustness.py  test_tree_generation.py
tests/unit/core/components/: test_filters.py  test_reader.py  test_writer.py
tests/unit/core/pipeline/: test_filters.py  test_reader.py  test_validator.py  test_worker_logic.py  test_writer.py
tests/unit/core/processing/: test_minifier.py  test_sanitizer.py  test_tokenizer.py  test_tokenizer_strategies.py
tests/unit/core/services/: test_cache.py  test_estimator.py  test_scanner.py  test_updater_service.py
tests/unit/core/stages/: test_assembler.py  test_setup.py  test_validator.py  test_worker_logic.py
tests/unit/domain/: test_config_domain.py  test_models.py
tests/unit/interface/cli/: test_cli_args.py
tests/unit/interface/gui/: test_controller_mapping.py  test_gui_handlers.py  test_pricing_thread.py
tests/unit/interface/gui/utils/: test_binder.py
tests/unit/scripts/: test_updater.py
tests/unit/utils/: test_i18n.py
transcriptor/: __init__.py  code_transcriptor.py  main.py
