[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptor4ai"
version = "1.6.0"
description = "High-performance context extraction engine featuring parallel streaming, security sanitization, and seamless background OTA updates."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Enrique Paredes", email = "eparedesbalen@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "PySimpleGUI",
    "tiktoken>=0.7.0",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/eparedesbalen/transcriptor4ai"

[project.scripts]
transcriptor-cli = "transcriptor4ai.interface.cli.app:main"
transcriptor-gui = "transcriptor4ai.interface.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["transcriptor4ai*"]

[tool.setuptools.package-data]
transcriptor4ai = ["interface/locales/*.json"]

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "PySimpleGUI"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"