[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptor4ai"
version = "2.0.1"
description = "High-performance context extraction engine featuring parallel streaming, security sanitization, and seamless background OTA updates."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Enrique Paredes", email = "eparedesbalen@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "customtkinter>=5.2.2",
    "tiktoken>=0.7.0",
    "requests>=2.31.0",
    "ruff>=0.1.13",
    "pre-commit>=3.6.0",
    "python-semantic-release>=9.0.0",
    "google-genai",
    "anthropic>=0.30.0",
    "transformers>=4.40.0",
    "mistral-common>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/eparedesbalen/transcriptor4ai"

[project.scripts]
transcriptor-cli = "transcriptor4ai.interface.cli.app:main"
transcriptor-gui = "transcriptor4ai.interface.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["transcriptor4ai*"]

[tool.setuptools.package-data]
transcriptor4ai = ["interface/locales/*.json"]

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "customtkinter",
    "tiktoken",
    "requests",
    "google.*",
    "anthropic",
    "transformers",
    "mistral_common.*",
    "tkinterdnd2"
]
ignore_missing_imports = true

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
markers = [
    "gui: mark test as requiring a GUI environment (skip in headless CI if needed)."
]

# =============================================================================
# RUFF CONFIGURATION
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E402"]
[tool.ruff.lint.isort]
known-first-party = ["transcriptor4ai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# SEMANTIC RELEASE CONFIGURATION
# =============================================================================
[tool.semantic_release]
version_variable = [
    "src/transcriptor4ai/domain/constants.py:CURRENT_CONFIG_VERSION",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python scripts/build.py"